tests/negative/semantic/import_circular/input.ci
import "a.ci";
void main() {}
